Fix image upload and update scrollbar UI

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -103,3 +103,90 @@
     animation: marquee2 25s linear infinite;
   }
 }
+
+.scrollbar {
+  --sb-track-color: #ffffff;
+  --sb-thumb-color: #000000;
+}
+
+html.dark,
+html.dark .scrollbar {
+  --sb-track-color: #1f1f1f;
+  --sb-thumb-color: #e6e6e6;
+}
+
+.scrollbar::-webkit-scrollbar {
+  width: 16px;
+}
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+.toc-scrollbar::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-track,
+.scrollbar::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+}
+
+::-webkit-scrollbar-track {
+  border-left: 2px solid #000;
+}
+
+::-webkit-scrollbar-thumb,
+.scrollbar::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+}
+
+html.dark ::-webkit-scrollbar-thumb {
+  border-left: 2px solid #000;
+}
+
+.code::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.code::-webkit-scrollbar-thumb {
+  background: white;
+}
+
+.code::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  border: 0 !important;
+}
+
+.code::-webkit-scrollbar-corner {
+  background: transparent !important;
+  border: 0 !important;
+}
+
+.command-scrollbar::-webkit-scrollbar {
+  width: 10px;
+}
+
+.command-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.command-scrollbar::-webkit-scrollbar-thumb {
+  background: #000;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  body,
+  .scrollbar {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  }
+
+  .command-scrollbar {
+    scrollbar-color: #000 transparent;
+  }
+}
+
+html body[data-scroll-locked] {
+  margin-right: 0px !important;
+}
